--- a/src/ui/screens/mainScreen/MainScreen.css
+++ b/src/ui/screens/mainScreen/MainScreen.css
@@ -2,12 +2,10 @@
   height: calc(100vh - 50px - 30px);
   display: flex;
   flex-direction: column;
-  
-  
   align-items: center;
   font-size: 1.6rem;
   background-color: lightblue;
-  
+  font-family: sans-serif;
 }
 
 .button {
@@ -42,4 +40,5 @@
   background-color: black;
   border-radius: 15px;
   margin: 20px;
+  padding: 30px;
 }
